# medical-audit-v2

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  dev.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 059cc7a5180f_add_indexes_on_invoice_foreign_keys.py  3c5f8a2d1e04_add_prefix_corrections.py  7929537df5a9_drop_unique_invoice_id_prefix.py  94c9b6697c6b_remove_system_settings_table.py  a1b2c3d4e5f6_service_type_nullable.py  a2b3c4d5e6f7_rename_institution_contracts_to_agreements.py  a7f3b1e2c8d5_add_invoice_status_integrity_triggers.py  b2c3d4e5f6a7_invoice_service_type_nullable.py  c3d4e5f6a7b8_add_logo_to_institutions.py  d4e5f6a7b8c9_drop_system_settings.py  db5ece233ada_initial_schema.py  e1f2a3b4c5d6_add_admission_to_invoices.py  e5f6a7b8c9d0_restore_system_settings.py  f6a7b8c9d0e1_invoice_id_prefix_nullable.py  f7b8c9d0e1f2_normalize_administrators_contracts.py
app/: config.py  crypto.py  database.py  main.py  paths.py
app/models/: __init__.py  finding.py  hospital.py  institution.py  invoice.py  period.py  rules.py
app/repositories/: finding_repo.py  hospital_repo.py  institution_repo.py  invoice_repo.py  rules_repo.py
app/routers/: pages.py
app/routers/api/: explorer.py  findings.py  hospitals.py  invoices.py  periods.py  pipeline.py  settings.py
app/schemas/: explorer.py  finding.py  hospital.py  institution.py  invoice.py  rules.py
app/services/: billing.py  pipeline_runner.py  task_manager.py
app/static/logos/: RAMON MARIA ARANA.avif  cajamarca.avif  san_luis.avif
app/templates/: base.html
app/templates/audit/: index.html
app/templates/explorer/: panel.html
app/templates/help/: index.html
app/templates/pipeline/: index.html
app/templates/settings/: index.html
core/: __init__.py  downloader.py  drive.py  helpers.py  inspector.py  ops.py  organizer.py  processor.py  reader.py  scanner.py  standardizer.py  validator.py
docs/: DEPLOY.md  RUNNING.md
monitoring/grafana/dashboards/: fastapi.json
nginx/: nginx.conf
scripts/: docker-entrypoint.sh
seeds/: seed_data.py
tests/: conftest.py
tests/app/: test_billing.py  test_periods.py  test_pipeline_runner.py
tests/app/repos/: conftest.py  test_invoice_repo.py  test_rules_repo.py
tests/core/: test_helpers.py  test_inspector.py  test_ops.py  test_organizer.py  test_scanner.py  test_standardizer.py  test_validator.py
tests/load/: locustfile.py
