[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-audit-v2"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.3",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "cryptography>=42",
    "structlog>=24",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "tqdm>=4.66",
    "ocrmypdf>=16",
    "playwright>=1.44",
    "google-api-python-client>=2.130",
    "google-auth>=2.30",
    "aiofiles>=23",
    "python-dotenv>=1.0",
    "py7zr>=0.20",
    "rarfile>=4.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*", "seeds*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-ra", "--tb=short", "--strict-markers"]
markers = [
    "db: tests that require a live PostgreSQL instance",
    "slow: tests that are slow (OCR, large file I/O)",
    "pdf: tests that require real PDF fixture files",
]

[tool.coverage.run]
source = ["core", "app"]
omit = ["app/models/*", "*/__pycache__/*", "seeds/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Start permissive — tighten gradually as the codebase is annotated
warn_return_any = false
warn_unused_ignores = true
no_implicit_reexport = false
